--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-minima
+title: t-j's github
+description: not entirely sure how I intend to use this, but here we go anyway
