--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-architect
 title: t-j's github
 description: not entirely sure how I intend to use this, but here we go anyway
